tests/negative/Internal/WrongReturnTypeParameters.juvix
module WrongReturnTypeParameters;

inductive A (B : Type) {
c : A B B;
};

end;
